@@ -1,13 +1,13 @@
 /**
  * init.js
- * -------
+ *
+ * Copyright (c) 1999-2003 The SquirrelMail Project Team
+ * Licensed under the GNU GPL. For full terms see the file COPYING.
+ *
  * Grabs the text from the SquirrelMail field and submits it to
  * the squirrelspell.
  *
  * $Id$
- *
- * @author Konstantin Riabitsev <icon@duke.edu> ($Author$)
- * @version $Date$
  */
 
 /**
@@ -19,7 +19,7 @@
  * @return      void 
  */
 function sqspell_init(flag){
-  textToSpell = opener.document.forms[0].subject.value + "\n" + opener.document.forms[0].body.value;
+  textToSpell = opener.document.compose.subject.value + "\n" + opener.document.compose.body.value;
   document.forms[0].sqspell_text.value = textToSpell;
   if (flag) document.forms[0].submit();
 }
